update GetAllBooks func
